# target-gcs

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  meltano.yml  pyproject.toml  sample.config.json
.github/: dependabot.yml
.github/workflows/: ci.yml
target_gcs/: sinks.py  target.py
target_gcs/tests/: __init__.py  test_core.py  test_sinks.py
